--- a/Projects/CarPrice.html
+++ b/Projects/CarPrice.html
@@ -19,29 +19,16 @@
 				<div id="header">
 
 					<!-- Inner -->
-						<div class="inner">
+						<!-- <div class="inner">
 							<header>
-								<h1><a href="../index.html" id="logo">Jay's Portfolio</a></h1>
+								<h1><a href="../index.html" id="logo">MJ's Portfolio</a></h1>
 							</header>
-						</div>
+						</div> -->
 
 					<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="../index.html">Home</a></li>
-							<li><a href="../About.html">About</a></li>
-							<li>
-								<a href="../Projects.html">Projects</a>
-								<ul>
-									<li><a href="CarPrice.html">Car Price Predictor</a></li>
-									<li><a href="EMR.html">EMR Management</a></li>
-									
-								</ul>
-							</li>
-							<li><a href="../Resume.html">Resume</a></li>
-							<li><a href="https://github.com/man-dsc">GitHub</a></li>
-						</ul>
-					</nav>
+						<div id="nav-placeholder"></div>
+						<script src="/JaysAnalystPortfolio/navbar.js"></script>
+					<!--Nav end-->
 
 				</div>
 
@@ -51,25 +38,25 @@
 					<div class="container">
 						<article id="main" class="special">
 							<header>
-								<h2><a href="#">Car Price Appraisal Tool</a></h2>
-								<p>
+								<h2><a>Car Price Appraisal Tool</a></h2>
+								<!-- <p>
 									Know what the market value of your car should be worth
-								</p>
-								<div>								Explore the Car Price appraisal tool intrecasies. This tool will be on my public GitHub.
-                                </br>
+								</p>-->
+								<div>
                                 A front end will be deployed to this page (TBD).
                                 </div>
 							</header>
 
 
 						</article>
-						<hr />
+						<!-- <hr /> -->
+					<br>
 						<div class="row">
 							
 							<article class="col-4 col-12-mobile special">
 								<a href="#" class="image featured"><img src="../images/webscrape.png" alt="" /></a>
 								<header>
-									<h3><a href="#">Web Scraping</a></h3>
+									<h3><a>Web Scraping</a></h3>
 								</header>
 								<p>
 									Web scraping is used to extract data from websites, enabling the collection of large datasets for analysis.
@@ -81,7 +68,7 @@
 							<article class="col-4 col-12-mobile special">
 								<a href="#" class="image featured"><img src="../images/baselien.png" alt="" /></a>
 								<header>
-									<h3><a href="#">Building a Baseline</a></h3>
+									<h3><a>Building a Baseline</a></h3>
 								</header>
 								<p>
 									To address the chance of insufficient data for machine learning training, an average price is calculated from the scraped data.
@@ -93,7 +80,7 @@
 							<article class="col-4 col-12-mobile special">
 								<a href="#" class="image featured"><img src="../images/mltraining.png" alt="" /></a>
 								<header>
-									<h3><a href="#">ML Training and Testing</a></h3>
+									<h3><a>ML Training and Testing</a></h3>
 								</header>
 								<p>
 									The machine learning model is trained using linear regression, leveraging price and mileage as key features.
