--- a/Projects/EMR.html
+++ b/Projects/EMR.html
@@ -19,29 +19,16 @@
 				<div id="header">
 
 					<!-- Inner -->
-						<div class="inner">
+						<!-- <div class="inner">
 							<header>
-								<h1><a href="../index.html" id="logo">Jay's Portfolio</a></h1>
+								<h1><a href="../index.html" id="logo">MJ's Portfolio</a></h1>
 							</header>
-						</div>
+						</div> -->
 
 					<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="../index.html">Home</a></li>
-							<li><a href="../About.html">About</a></li>
-							<li>
-								<a href="../Projects.html">Projects</a>
-								<ul>
-									<li><a href="CarPrice.html">Car Price Predictor</a></li>
-									<li><a href="EMR.html">EMR Management</a></li>
-									
-								</ul>
-							</li>
-							<li><a href="../Resume.html">Resume</a></li>
-							<li><a href="https://github.com/man-dsc">GitHub</a></li>
-						</ul>
-					</nav>
+						<div id="nav-placeholder"></div>
+						<script src="/JaysAnalystPortfolio/navbar.js"></script>
+					<!--Nav end-->
 
 				</div>
 
@@ -51,22 +38,25 @@
 					<div class="container">
 						<article id="main" class="special">
 							<header>
-								<h2><a href="#">EMR Migration Tool</a></h2>
-								<p>
+								<h2><a>EMR Migration Tool</a></h2>
+								<!-- <p>
 									Transfer thousands of data points between EMR systems
-								</p>
-								<div>								<u>Explore the EMR migration tool intrecasies. This tool will not be on my public GitHub.</u></div>
+								</p> -->
+								<!-- <div>								
+									<u>Explore the EMR migration tool intrecasies. This tool will not be on my public GitHub.</u>
+								</div> -->
 							</header>
 
 
 						</article>
-						<hr />
+						<!-- <hr /> -->
+						 <br>
 						<div class="row">
 							
 							<article class="col-4 col-12-mobile special">
 								<a href="#" class="image featured"><img src="../images/maketrainingset.png" alt="" /></a>
 								<header>
-									<h3><a href="#">Making a training set</a></h3>
+									<h3><a >Making a training set</a></h3>
 								</header>
 								<p>
 									The two steps for building this project are creating a training set and building the machine learning program.
@@ -81,7 +71,7 @@
 							<article class="col-4 col-12-mobile special">
 								<a href="#" class="image featured"><img src="../images/training.png" alt="" /></a>
 								<header>
-									<h3><a href="#">Training the data</a></h3>
+									<h3><a >Training the data</a></h3>
 								</header>
 								<p>
 									The pipeline for machine learning includes TF-IDF and Count Vectorizer.
@@ -95,7 +85,7 @@
 							<article class="col-4 col-12-mobile special">
 								<a href="#" class="image featured"><img src="../images/validation.png" alt="" /></a>
 								<header>
-									<h3><a href="#">Validation</a></h3>
+									<h3><a >Validation</a></h3>
 								</header>
 								<p>
 									K-fold cross-validation is used to evaluate the performance of a model by splitting the dataset into multiple subsets, ensuring that every data point is used for both training and testing.
