--- a/index.html
+++ b/index.html
@@ -16,37 +16,23 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Jay's Portfolio</a></h1>
+								<h1><a href="index.html" id="logo">MJ's Portfolio</a></h1>
 								<hr />
-								<p>Recent Engineering Grad Seeking Analyst Positions</p>
+								<p>Engineer Applying Economic and Impact Analysis to Energy and Infrastructure Investments</p>
 							</header>
 							<footer>
 								<a href="About.html" class="button circled scrolly">Start</a>
-								<hr>
-								<ul class="icons">
+								
+								<!-- <ul class="icons">
 									<li><a href="https://www.linkedin.com/in/jay--dev/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
-								</ul>
+								</ul> -->
 							</footer>
 						</div>
 
 					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li><a href="About.html">About</a></li>
-								<li>
-									<a href="Projects.html">Projects</a>
-									<ul>
-										<li><a href="Projects/CarPrice.html">Car Price Predictor</a></li>
-										<li><a href="Projects/EMR.html">EMR Management</a></li>
-										
-									</ul>
-								</li>
-								<li><a href="Resume.html">Resume</a></li>
-								<li><a href="https://github.com/man-dsc">GitHub</a></li>
-							</ul>
-						</nav>
-
+						<div id="nav-placeholder"></div>
+						<script src="navbar.js"></script>
+					<!--Nav end-->
 				</div>
 		</div> 
 
