--- a/scraper/Display1.html
+++ b/scraper/Display1.html
@@ -17,7 +17,7 @@
         let allCountries = [];
 
         // Load the data from the auto-generated JSON
-        fetch('/JaysAnalystPortfolio/scraper/data.json')
+        fetch('/Portfolio/scraper/data.json')
             .then(res => res.json())
             .then(data => {
                 allCountries = data;
