--- a/Projects/EMR.html
+++ b/Projects/EMR.html
@@ -27,7 +27,7 @@
 
 					<!-- Nav -->
 						<div id="nav-placeholder"></div>
-						<script src="/JaysAnalystPortfolio/navbar.js"></script>
+						<script src="/Portfolio/navbar.js"></script>
 					<!--Nav end-->
 
 				</div>
